[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "rapps-sdk"
version = "0.1.0"
description = "Python SDK for rApps interacting with Non-RT RIC"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Muhammad Murtala Amin", email = "muhdmamin@gmail.com" }]
dependencies = ["httpx>=0.27", "pydantic>=2.7"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "respx>=0.21", "build", "twine"]

[tool.hatch.build.targets.wheel]
packages = ["src/rapps_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
